--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
 }
 
 #settings:hover {
+  cursor: pointer;
   transition: 0.3s;
   color: grey;
 }
@@ -51,15 +52,31 @@ body {
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #222;
-    height: auto;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    border-radius: .5em;
-    z-index: 1;
+  font-family: "Nunito", sans-serif;
+  display: none;
+  position: absolute;
+  background-color: #222;
+  height: auto;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: .5em;
+  z-index: 1;
+}
+
+.settings-content {
+  font-family: "Nunito", sans-serif;
+  display: none;
+  position: absolute;
+  background-color: #222;
+  color: white;
+  height: auto;
+  width: 250px;
+  padding: 1em;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: .5em;
+  z-index: 1;
 }
 
 .dropdown-content a {
@@ -71,11 +88,111 @@ body {
 
 .dropdown a:hover {background-color: #ddd;}
 
-.show {
+.palette-show {
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
 
+.settings-show {
+  display: flex;
+  flex-flow: column wrap;
+}
+
 .hide {
   display:none;
+}
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    border-radius: .5em;
+
+}
+
+.pen {
+  cursor: url('./assets/pen.png') 5 15, auto;
+}
+
+.eraser {
+  cursor: url('./assets/circle.png') -2 5, auto;
+}
+
+/* Modal Content */
+.modal-content {
+    font-family: 'Nunito', sans-serif;
+    position: relative;
+    background-color: #222;
+    color: white;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #222;
+    border-radius: .5em;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+} */
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #222;
+    border-radius: .5em;
+    color: white;
+}
+
+.modal-body {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 2px 16px;
+  border-radius: .5em;
+}
+
+.modal-body input {
+  background-color: transparent;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #222;
+    border-radius: .5em;
+    color: white;
 }
