--- a/slider.css
+++ b/slider.css
@@ -106,7 +106,7 @@ input[type=range].slider::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #141414, 0px 0px 0px #212121;
   border: 0px solid #141414;
   height: 20px;
-
+}
 input[type=range].slider {
   -webkit-appearance: none;
   width: 100%;
